<resources>
    <string name="app_name">FitChallenge</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new user</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="back">Go Back</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logged_out">You are now logged out</string>
    <string name="no_account">Do not have an account? Register</string>
    <string name="here">Here</string>
    <string name="workout_history">Workout History</string>
    <string name="set_goals">Set Steps Goal</string>
    <string name="default_goal">0 steps</string>
    <string name="steps">steps</string>
    <string name="challenges">Challenges</string>
    <string name="workout_routines">Workout Routines</string>
    <string name="logout_warning">Are you sure you want to log out?</string>
    <string name="choose_date_and_time">Choose Date and Time</string>
    <string name="team_info">Workout Wizards - 2023</string>
    <string name="log_workout">Log a workout</string>
    <string name="cardio">Cardio</string>
    <string name="setsAndReps">Sets and Reps</string>

    <string-array name="workout_types">
        <item>Cardio</item>
        <item>Sets &amp; Reps</item>
    </string-array>
</resources>